[package]
name = "isv2"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.7.2", package = "gtk4", features = ["v4_12"] }
once_cell = "1.18.0"
pango = "0.17.4"
pangocairo = "0.18.0"
glib-sys = "0.18"
cairo-rs = { version = "0.18", features = ["png"] }

serde = { version = "1.0.189", features = ["derive"] }
serde_path_to_error = "0.1"
toml = "0.8.2"
serde_json = "1.0"
serde_yaml = "0.9"
async-channel = "2.0"
dunce = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["wincon", "winuser"]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

